--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Promise Sentinel | Offline Flight Recorder</title>
+    <title>Sentinel Protocol | Offline Flight Recorder</title>
     <link rel="preload" href="/clunk.mp3" as="audio">
     <link rel="preload" href="/whoosh.mp3" as="audio">
     <script>
